Fix filter style on tablet

--- a/src/App.css
+++ b/src/App.css
@@ -478,11 +478,11 @@ label {
 
   .filter {
     display: flex;
-    flex-flow: wrap;
   }
 
   .filter-price {
-    width: 100%;
+    width: 50%;
+    padding-top: 40px;
   }
 
   .item {
@@ -501,6 +501,11 @@ label {
 
 /* Desktop: */
 @media only screen and (min-width: 812px) {
+  .filter-price {
+    width: 100%;
+    padding-top: 0;
+  }
+
   .cart-summary {
     width: 40%;
     min-width: 200px;
@@ -592,7 +597,7 @@ label {
   }
 
   .aside {
-    width: 20%;
+    width: 30%;
   }
 
   .filter {
